NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

Shell-script: 

* Fix the "okular" previewer mode.
* Added a "noviewer" predefined viewer for either dvi or pdf modes. 

LaTeX macros:

Installation/Documentation:

* Fix the example and documentation for use with Okular PDF previewer. 

SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.3.2
 * Added an argument to "reslice" to tell if the cursor is present (for xpdf)
 * Changed <viewlog> to <viewtexlog> fixes strange interactions with emacs
 * Added cursor argument to reslice when the cursor is displayed
 * Small changes in whizzy-show-point (under mark, in commands).
 * comint-output-filter-functions made buffer-local in the process windows

Shell-script: 

 - version 1.3.2
 * Do not change page in xpdf reloading when cursor position is not available
 * Changed <viewlog> to <viewtexlog> because fo strange interaction with emacs
 * pdf mode now calls -reload only when the cursor is not displayed. 
 * pdf mode changes latex to pdflatex format
 * Added PDF* shell variables to preconfigurate whizzytex for pdflatex
 * Postdate slice for use in xpdf mode
 * Pass output mode (dvi or pdf) to latex
 * Added quotes in "$INPUT/view.$$" to allow white spaces  in DIRS
 * Wrapped dvicopy to make it atomic.

LaTeX macros:

 - version 1.3.2
 * Desactivated \refstepcounter when changed (cleveref package). Temporary fix.
 * Added \AtEndPreloadaux hook run after preloading of aux files
 * Takes output mode (dvi or pdf) from shell-script
 * Automatically load hyperref in pdflatex mode
 * Pass pdftex driver to hyperref in pdflatex mode
 * inhibited adjustment of enumi* counters

Installation/Documentation:

 - version 1.3.2
 * Some macros for compatibility with XEamcs and version 22.
 * Documentation for whizzy-point-face.

OLDER CHANGES:
==============

Emacs-mode:

 - version 1.3.1
 * fixed some quotes in configuration script.
 * added \jobname.wel configuration file 