@@ -55,7 +55,7 @@ LaTeX documents</font>. </i>
 <p> <font color=blue>WhizzyTeX</font> provides a minor mode for
 Emacs or XEmacs, a (bash) shell-script daemon and some LaTeX macros.  It
 works under Unix with <tt>gv</tt> and <tt>xdvi</tt> viewers, but the
-<a href="http://gallium.inria.fr/advi/">Active-DVI</a> viewer will provided
+<a href="http://gallium.inria.fr/advi/">Active-DVI</a> viewer will provide
 much better visual effects and will offer more functionalities. 
 
 <!--
